--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,70 +1,77 @@
 ---
-import { SITE_BASE } from '@/consts'
+import { SITE_BASE, SITE_TITLE, SITE_DESCRIPTION, X_ACCOUNT } from '@/consts'
+import { useTranslations, LOCALES, getLocalePaths, type Lang } from '@/i18n'
+const t = useTranslations(Astro.currentLocale as Lang)
 import '@/styles/global.css'
 import { ClientRouter } from 'astro:transitions'
 
 interface Props {
-	title: string
-	description: string
+	title?: string
+	description?: string
 	image?: string
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-
-const { title, description, image = `${SITE_BASE}/saral-og.jpg` } = Astro.props
+const siteUrl = Astro.site!
+const canonicalURL = new URL(Astro.url.pathname, siteUrl)
+const { title, description, image = `${SITE_BASE}/og.jpg` } = Astro.props
+const locale = Astro.currentLocale as Lang
+const localeTitle = title ? `${title} - ${t(SITE_TITLE)}` : t(SITE_TITLE)
+const localeDescription = description || t(SITE_DESCRIPTION)
 ---
 
 <!-- Global Metadata -->
-<meta charset="utf-8" />
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
 
+<!-- Locales Paths -->
+{
+	getLocalePaths(Astro.url).map((props) => (
+		<link
+			rel="alternate"
+			hreflang={LOCALES[props.lang]?.lang || props.lang}
+			href={Astro.site?.origin + props.path}
+		/>
+	))
+}
+
 <!-- Favicons -->
-<link
-	rel="icon"
-	type="image/png"
-	href={`${SITE_BASE}/favicon-96x96.png`}
-	sizes="96x96"
-/>
-<link rel="icon" type="image/svg+xml" href={`${SITE_BASE}/favicon.svg`} />
-<link rel="shortcut icon" href={`${SITE_BASE}/favicon.ico`} />
-<link
-	rel="apple-touch-icon"
-	sizes="180x180"
-	href={`${SITE_BASE}/apple-touch-icon.png`}
-/>
-<meta name="apple-mobile-web-app-title" content="Saral Theme" />
-<link rel="manifest" href={`${SITE_BASE}/site.webmanifest`} />
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="PPL Blog" />
+<link rel="manifest" href="/site.webmanifest" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta name="title" content={title} />
-<meta name="description" content={description} />
+<title>{localeTitle}</title>
+<meta name="title" content={localeTitle} />
+<meta name="description" content={localeDescription} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
+<meta property="og:title" content={localeTitle} />
+<meta property="og:site_name" content={localeTitle} />
+<meta property="og:description" content={localeDescription} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
+<meta property="twitter:title" content={localeTitle} />
+<meta property="twitter:description" content={localeDescription} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="og:locale" content={LOCALES[locale]?.lang || locale} />
+<meta name="twitter:site" content={t(X_ACCOUNT)} />
 
-<!-- RSS Auto-discovery -->
-<link
-	rel="alternate"
-	type="application/rss+xml"
-	title="Saral Theme RSS Feed"
-	href={new URL('rss.xml', Astro.site)}
-/>
+<!-- OGP -->
+
+<!-- Auto-discovery -->
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- View Transitions -->
 <ClientRouter />
