--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -3,6 +3,7 @@ import { SITE_BASE } from '@/consts'
 import FormattedDate from './FormattedDate.astro'
 import type { ImageMetadata } from 'astro'
 import { Image } from 'astro:assets'
+import { type Lang } from '@/i18n'
 
 const { post } = Astro.props
 
@@ -10,11 +11,13 @@ const blogImages = import.meta.glob<{ default: ImageMetadata }>(
 	'/src/assets/blogimages/**/*.{jpeg,jpg,png,gif}'
 )
 
-const coverImagePath = `/src/assets/blogimages/${post.slug}/cover.jpg`
+const locale = Astro.currentLocale as Lang
+const [, ...id] = post.id.split('/')
+const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 ---
 
 <a
-	href={`${SITE_BASE}/posts/${post.slug}/`}
+	href={`${SITE_BASE}/${locale}/posts/${id}/`}
 	class="flex flex-col gap-4 pb-8 h-full group transition-colors"
 >
 	{
@@ -33,7 +36,10 @@ const coverImagePath = `/src/assets/blogimages/${post.slug}/cover.jpg`
 	>
 		{post.data.title}
 	</h4>
-	<p class="line-clamp-3 opacity-80">
+	<p
+		class="line-clamp-3 opacity-80"
+		transition:name={`blog-description-${post.slug}`}
+	>
 		{post.data.description}
 	</p>
 	<p
