--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -1,10 +1,19 @@
 ---
+import { LOCALES, useTranslations, type Lang } from '@/i18n'
+const t = useTranslations(Astro.currentLocale as Lang)
 import Layout from '@/layouts/Base.astro'
+
+export const getStaticPaths = () =>
+	Object.keys(LOCALES).map((lang) => ({
+		params: { lang },
+	}))
 ---
 
 <Layout>
 	<main class="app-container pt-36">
-		<h1 class="text-6xl pb-2 font-bold">About Me</h1>
+		<h1 class="text-6xl pb-2 font-bold">
+			{t({ es: 'Acerca de Mí', gl: 'Sobre Min', en: 'About Me' })}
+		</h1>
 	</main>
 	<section class="app-container py-12 mb-8">
 		<div
