--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,7 @@ const today = new Date()
 							(link) => (
 								<a
 									class="text-lg"
-									href={`${SITE_BASE}/${locale}/` + link.url}
+									href={`${SITE_BASE}/${locale}/${link.url}`}
 									rel="noopener noreferrer"
 								>
 									{link.name[locale]}
