--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE_BASE, SocialLinks, WebsiteLinks } from '@/consts'
-import Firma from '@/assets/firma.svg'
+import Firma from '@/components/Firma.astro'
 import Frase from '@/assets/frase.svg'
 import { type Lang, useTranslations } from '@/i18n'
 const t = useTranslations(Astro.currentLocale as Lang)
@@ -57,13 +57,7 @@ const today = new Date()
 				</div>
 			</div>
 			<div class="flex justify-center md:justify-end">
-				<a
-					href={`${SITE_BASE}/${locale}/`}
-					class="block w-fit"
-					aria-label="Home"
-				>
-					<Firma height={100} width={200} />
-				</a>
+				<Firma />
 			</div>
 		</div>
 		<div
