--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -26,7 +26,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 				src={blogImages[coverImagePath]()}
 				alt={post.data.title}
 				class="object-cover rounded-xl aspect-video"
-				transition:name={`blog-cover-${post.slug}`}
+				transition:name={`blog-cover-${post.data.id}`}
 			/>
 		)
 	}
@@ -38,13 +38,13 @@ const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 	</h4>
 	<p
 		class="line-clamp-3 opacity-80"
-		transition:name={`blog-description-${post.slug}`}
+		transition:name={`blog-description-${post.data.id}`}
 	>
 		{post.data.description}
 	</p>
 	<p
 		class="uppercase text-sm mt-auto tracking-tight"
-		transition:name={`blog-date-${post.slug}`}
+		transition:name={`blog-date-${post.data.id}`}
 	>
 		<FormattedDate date={post.data.pubDate} />
 	</p>
