--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -14,6 +14,7 @@ const { class: className } = Astro.props
 		aria-label="Auto Theme"
 		title="Set theme to follow system preference"
 		class="theme-button theme-auto"
+		data-umami-event="Change Theme Auto"
 	>
 		<Icon
 			name="mdi:brightness-auto"
@@ -26,6 +27,7 @@ const { class: className } = Astro.props
 		aria-label="Light Theme"
 		title="Set theme to light"
 		class="theme-button theme-light"
+		data-umami-event="Change Theme Light"
 	>
 		<Icon
 			name="mdi:white-balance-sunny"
@@ -38,6 +40,7 @@ const { class: className } = Astro.props
 		aria-label="Dark Theme"
 		title="Set theme to dark"
 		class="theme-button theme-dark"
+		data-umami-event="Change Theme Dark"
 	>
 		<Icon
 			name="mdi:moon-and-stars"
