--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -136,8 +136,8 @@ const minutesRead = Math.ceil(Number(remarkPluginFrontmatter.minutesRead))
 					<div class="flex justify-between mt-16 gap-4 flex-wrap italic">
 						<a
 							href={`https://github.com/TeenBiscuits/Blog/edit/main/src/content/blog/${slug}/index.md`}
+							data-umami-event="Suggest edit"
 							target="_blank"
-							rel="noopener noreferrer"
 							class="hover:underline underline-offset-4 opacity-70 hover:opacity-100"
 							><Icon name="mdi:pencil-outline" class="inline-block" />
 							{
