--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -40,7 +40,7 @@ const posts = (await getCollection('blog'))
 		<p class="text-2xl max-w-2xl font-light leading-normal">
 			{
 				t({
-					es: `donde hablo de las cosas que aprendo o de las que simplemente me apetece`,
+					es: `donde hablo de las cosas que aprendo o de las que simplemente me apetecen`,
 					gl: `onde falo das cousas que aprendo ou das que simplemente me apetece`,
 					en: `where I talk about the things I learn or the things I just feel like`,
 				})
