fix: transition name in blog card

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -33,7 +33,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.id}/cover.jpg`
 	}
 	<h4
 		class="text-2xl font-semibold group-hover:text-primary dark:group-hover:text-primary-dark group-hover:underline transition-colors"
-		transition:name={`blog-title-${post.slug}`}
+		transition:name={`blog-title-${post.data.id}`}
 	>
 		{post.data.title}
 	</h4>
