--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,9 +38,9 @@ const localeDescription = description || t(SITE_DESCRIPTION)
 <!-- Favicons -->
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
+<!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<meta name="apple-mobile-web-app-title" content="PPL Blog" />
+<meta name="apple-mobile-web-app-title" content="P Blog" />
 <link rel="manifest" href="/site.webmanifest" />
 
 <!-- Canonical URL -->
