--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -70,14 +70,13 @@ const localeDescription = description || t(SITE_DESCRIPTION)
 
 <!-- Self Hosted Umami -->
 <script
-	is:inline
 	defer
 	src="https://analytics.pablopl.dev/script.js"
 	data-website-id="22e6e276-eba7-4919-9174-5a3b9787afc0"
 	data-domains="blog.pablopl.dev"></script>
 
 <!-- Track browser language in Umami -->
-<script is:inline>
+<script>
 	const trackLanguage = () => {
 		window.umami?.track((props) => ({ ...props, language: navigator.language }))
 	}
